syntax = "proto3";

message picoMessage {
  oneof payload {
    Projector projector = 1;
    Light light = 2;
    Audio audio = 3;
  }
}

message Projector {
  Header header = 1;
  repeated DrawInstruction drawInstructions = 2;
}

message Header {
  int32 projectorId = 1;
  int32 pointCount = 2;
  bool home = 3;
  bool enable = 4;
  bool configuration_mode = 5;
  bool draw_boundary = 6;
  bool oneshot = 7;
  int32 speed_profile = 8;
  bool checksum = 9;
}

message DrawInstruction {
  int32 xCoOrd = 1;
  int32 yCoOrd = 2;
  int32 red = 3;
  int32 green = 4;
  int32 blue = 5;
  bool checksum = 6;
}

message Light {
  int32 lightId = 1;
  bool enable = 2;
}

message Audio { string audioFile = 1; }